--- a/tools/docker/specs/centos/pytorch/ipex-centos-icx-dlrm-fp32_spec.yml
+++ b/tools/docker/specs/centos/pytorch/ipex-centos-icx-dlrm-fp32_spec.yml
@@ -16,21 +16,21 @@ slice_sets:
     dockerfile_subdirectory: pytorch
     downloads: []
     documentation:
-      docs:
-      - name: Title
-        uri: models/quickstart/ipex-bkc/dlrm-icx/inference/fp32/.docs/title.md
-      - name: Description
-        uri: models/quickstart/ipex-bkc/dlrm-icx/inference/fp32/.docs/description.md
-      - name: Datasets
-        uri: models/quickstart/ipex-bkc/dlrm-icx/inference/fp32/.docs/datasets.md
-      - name: Quick Start Scripts
-        uri: models/quickstart/ipex-bkc/dlrm-icx/inference/fp32/.docs/quickstart.md
-      - name: Docker
-        uri: models/quickstart/ipex-bkc/dlrm-icx/inference/fp32/.docs/docker.md
-      - name: License
-        uri: models/quickstart/ipex-bkc/dlrm-icx/inference/fp32/.docs/license.md
-      name: README.md
-      uri: models/quickstart/ipex-bkc/dlrm-icx/inference/fp32
+      - docs:
+        - name: Title
+          uri: models/quickstart/ipex-bkc/dlrm-icx/inference/fp32/.docs/title.md
+        - name: Description
+          uri: models/quickstart/ipex-bkc/dlrm-icx/inference/fp32/.docs/description.md
+        - name: Datasets
+          uri: models/quickstart/ipex-bkc/dlrm-icx/inference/fp32/.docs/datasets.md
+        - name: Quick Start Scripts
+          uri: models/quickstart/ipex-bkc/dlrm-icx/inference/fp32/.docs/quickstart.md
+        - name: Docker
+          uri: models/quickstart/ipex-bkc/dlrm-icx/inference/fp32/.docs/docker.md
+        - name: License
+          uri: models/quickstart/ipex-bkc/dlrm-icx/inference/fp32/.docs/license.md
+        name: README.md
+        uri: models/quickstart/ipex-bkc/dlrm-icx/inference/fp32
     files:
     - destination: quickstart/vanilla_inference_latency.sh
       source: quickstart/ipex-bkc/dlrm-icx/inference/fp32/vanilla_inference_latency.sh
