--- a/tools/docker/specs/k8s/wide-deep-large-ds-fp32-training-k8s_spec.yml
+++ b/tools/docker/specs/k8s/wide-deep-large-ds-fp32-training-k8s_spec.yml
@@ -13,34 +13,34 @@ slice_sets:
         - destination: quickstart
           source: k8s/recommendation/tensorflow/wide_deep_large_ds/training/fp32
       documentation:
-        name: README.md
-        uri: models/k8s/recommendation/tensorflow/wide_deep_large_ds/training/fp32
-        text_replace:
-          <mode>: training
-          <model name>: Wide and Deep Large Dataset
-          <precision>: FP32
-          <use case>: recommendation
-          <package url>: https://storage.googleapis.com/intel-optimized-tensorflow/models/v2_3_0/wide-deep-large-ds-fp32-training-k8s.tar.gz
-          <package name>: wide-deep-large-ds-fp32-training-k8s.tar.gz
-          <package dir>: wide-deep-large-ds-fp32-training-k8s
-          <docker image>: intel/recommendation:tf-2.4.0-wide-deep-large-ds-fp32-training
-        docs:
-          - name: Title
-            uri: models/k8s/recommendation/tensorflow/wide_deep_large_ds/training/fp32/.docs/title.md
-          - name: Description
-            uri: models/k8s/recommendation/tensorflow/wide_deep_large_ds/training/fp32/.docs/description.md
-          - name: Download link
-            uri: models/k8s/recommendation/tensorflow/wide_deep_large_ds/training/fp32/.docs/download.md
-          - name: Datasets
-            uri: models/k8s/recommendation/tensorflow/wide_deep_large_ds/training/fp32/.docs/datasets.md
-          - name: Quick Start Scripts
-            uri: models/k8s/recommendation/tensorflow/wide_deep_large_ds/training/fp32/.docs/quickstart.md
-          - name: Kubernetes
-            uri: models/k8s/recommendation/tensorflow/wide_deep_large_ds/training/fp32/.docs/kubernetes.md
-          - name: Trouble Shooting
-            uri: models/k8s/recommendation/tensorflow/wide_deep_large_ds/training/fp32/.docs/troubleshooting.md
-          - name: License link
-            uri: models/k8s/recommendation/tensorflow/wide_deep_large_ds/training/fp32/.docs/license.md
+        - name: README.md
+          uri: models/k8s/recommendation/tensorflow/wide_deep_large_ds/training/fp32
+          text_replace:
+            <mode>: training
+            <model name>: Wide and Deep Large Dataset
+            <precision>: FP32
+            <use case>: recommendation
+            <package url>: https://storage.googleapis.com/intel-optimized-tensorflow/models/v2_3_0/wide-deep-large-ds-fp32-training-k8s.tar.gz
+            <package name>: wide-deep-large-ds-fp32-training-k8s.tar.gz
+            <package dir>: wide-deep-large-ds-fp32-training-k8s
+            <docker image>: intel/recommendation:tf-2.4.0-wide-deep-large-ds-fp32-training
+          docs:
+            - name: Title
+              uri: models/k8s/recommendation/tensorflow/wide_deep_large_ds/training/fp32/.docs/title.md
+            - name: Description
+              uri: models/k8s/recommendation/tensorflow/wide_deep_large_ds/training/fp32/.docs/description.md
+            - name: Download link
+              uri: models/k8s/recommendation/tensorflow/wide_deep_large_ds/training/fp32/.docs/download.md
+            - name: Datasets
+              uri: models/k8s/recommendation/tensorflow/wide_deep_large_ds/training/fp32/.docs/datasets.md
+            - name: Quick Start Scripts
+              uri: models/k8s/recommendation/tensorflow/wide_deep_large_ds/training/fp32/.docs/quickstart.md
+            - name: Kubernetes
+              uri: models/k8s/recommendation/tensorflow/wide_deep_large_ds/training/fp32/.docs/kubernetes.md
+            - name: Trouble Shooting
+              uri: models/k8s/recommendation/tensorflow/wide_deep_large_ds/training/fp32/.docs/troubleshooting.md
+            - name: License link
+              uri: models/k8s/recommendation/tensorflow/wide_deep_large_ds/training/fp32/.docs/license.md
       runtime:
         command:
           - kubectl
