--- a/tools/docker/specs/pytorch/pytorch-resnet50-fp32-inference_spec.yml
+++ b/tools/docker/specs/pytorch/pytorch-resnet50-fp32-inference_spec.yml
@@ -10,34 +10,34 @@ slice_sets:
     - PACKAGE_NAME=pytorch-resnet50-fp32-inference
     dockerfile_subdirectory: pytorch
     documentation:
-      docs:
-      - name: Title
-        uri: models/quickstart/image_recognition/pytorch/resnet50/inference/cpu/fp32/.docs/title.md
-      - name: Description
-        uri: models/quickstart/image_recognition/pytorch/resnet50/inference/cpu/fp32/.docs/description.md
-      - name: Download link
-        uri: models/quickstart/image_recognition/pytorch/resnet50/inference/cpu/fp32/.docs/download.md
-      - name: Datasets
-        uri: models/quickstart/image_recognition/pytorch/resnet50/inference/cpu/fp32/.docs/datasets.md
-      - name: Quick Start Scripts
-        uri: models/quickstart/image_recognition/pytorch/resnet50/inference/cpu/fp32/.docs/quickstart.md
-      - name: Bare Metal
-        uri: models/quickstart/image_recognition/pytorch/resnet50/inference/cpu/fp32/.docs/baremetal.md
-      - name: Docker
-        uri: models/quickstart/image_recognition/pytorch/resnet50/inference/cpu/fp32/.docs/docker.md
-      - name: License
-        uri: models/quickstart/image_recognition/pytorch/resnet50/inference/cpu/fp32/.docs/license.md
-      name: README.md
-      text_replace:
-        <docker image>: 'intel/image-recognition:pytorch-1.5.0-rc3-resnet50-fp32-inference'
-        <mode>: inference
-        <model name>: ResNet50
-        <package dir>: pytorch-resnet50-fp32-inference
-        <package name>: pytorch-resnet50-fp32-inference.tar.gz
-        <package url>: 'https://storage.googleapis.com/intel-optimized-tensorflow/models/v2_3_0/pytorch-resnet50-fp32-inference.tar.gz'
-        <precision>: FP32
-        <use case>: image_recognition
-      uri: models/quickstart/image_recognition/pytorch/resnet50/inference/cpu/fp32
+      - docs:
+        - name: Title
+          uri: models/quickstart/image_recognition/pytorch/resnet50/inference/cpu/fp32/.docs/title.md
+        - name: Description
+          uri: models/quickstart/image_recognition/pytorch/resnet50/inference/cpu/fp32/.docs/description.md
+        - name: Download link
+          uri: models/quickstart/image_recognition/pytorch/resnet50/inference/cpu/fp32/.docs/download.md
+        - name: Datasets
+          uri: models/quickstart/image_recognition/pytorch/resnet50/inference/cpu/fp32/.docs/datasets.md
+        - name: Quick Start Scripts
+          uri: models/quickstart/image_recognition/pytorch/resnet50/inference/cpu/fp32/.docs/quickstart.md
+        - name: Bare Metal
+          uri: models/quickstart/image_recognition/pytorch/resnet50/inference/cpu/fp32/.docs/baremetal.md
+        - name: Docker
+          uri: models/quickstart/image_recognition/pytorch/resnet50/inference/cpu/fp32/.docs/docker.md
+        - name: License
+          uri: models/quickstart/image_recognition/pytorch/resnet50/inference/cpu/fp32/.docs/license.md
+        name: README.md
+        text_replace:
+          <docker image>: 'intel/image-recognition:pytorch-1.5.0-rc3-resnet50-fp32-inference'
+          <mode>: inference
+          <model name>: ResNet50
+          <package dir>: pytorch-resnet50-fp32-inference
+          <package name>: pytorch-resnet50-fp32-inference.tar.gz
+          <package url>: 'https://storage.googleapis.com/intel-optimized-tensorflow/models/v2_3_0/pytorch-resnet50-fp32-inference.tar.gz'
+          <precision>: FP32
+          <use case>: image_recognition
+        uri: models/quickstart/image_recognition/pytorch/resnet50/inference/cpu/fp32
     downloads: []
     files:
     - destination: models/image_recognition/pytorch/common
