--- a/tools/docker/specs/tensorflow/bert-large-bfloat16-inference_spec.yml
+++ b/tools/docker/specs/tensorflow/bert-large-bfloat16-inference_spec.yml
@@ -9,34 +9,34 @@ slice_sets:
     - PACKAGE_NAME=bert-large-bfloat16-inference
     dockerfile_subdirectory: model_containers
     documentation:
-      docs:
-      - name: Title
-        uri: models/quickstart/language_modeling/tensorflow/bert_large/inference/cpu/bfloat16/.docs/title.md
-      - name: Description
-        uri: models/quickstart/language_modeling/tensorflow/bert_large/inference/cpu/bfloat16/.docs/description.md
-      - name: Download link
-        uri: models/quickstart/language_modeling/tensorflow/bert_large/inference/cpu/bfloat16/.docs/download.md
-      - name: Datasets
-        uri: models/quickstart/language_modeling/tensorflow/bert_large/inference/cpu/bfloat16/.docs/datasets.md
-      - name: Quick Start Scripts
-        uri: models/quickstart/language_modeling/tensorflow/bert_large/inference/cpu/bfloat16/.docs/quickstart.md
-      - name: Bare Metal
-        uri: models/quickstart/language_modeling/tensorflow/bert_large/inference/cpu/bfloat16/.docs/baremetal.md
-      - name: Docker
-        uri: models/quickstart/language_modeling/tensorflow/bert_large/inference/cpu/bfloat16/.docs/docker.md
-      - name: License
-        uri: models/quickstart/language_modeling/tensorflow/bert_large/inference/cpu/bfloat16/.docs/license.md
-      name: README.md
-      text_replace:
-        <docker image>: 'intel/language-modeling:tf-2.4.0-bert-large-bfloat16-inference'
-        <mode>: inference
-        <model name>: BERT Large
-        <package dir>: bert-large-bfloat16-inference
-        <package name>: bert-large-bfloat16-inference.tar.gz
-        <package url>: 'https://storage.googleapis.com/intel-optimized-tensorflow/models/v2_3_0/bert-large-bfloat16-inference.tar.gz'
-        <precision>: BFloat16
-        <use case>: language_modeling
-      uri: models/quickstart/language_modeling/tensorflow/bert_large/inference/cpu/bfloat16
+      - docs:
+        - name: Title
+          uri: models/quickstart/language_modeling/tensorflow/bert_large/inference/cpu/bfloat16/.docs/title.md
+        - name: Description
+          uri: models/quickstart/language_modeling/tensorflow/bert_large/inference/cpu/bfloat16/.docs/description.md
+        - name: Download link
+          uri: models/quickstart/language_modeling/tensorflow/bert_large/inference/cpu/bfloat16/.docs/download.md
+        - name: Datasets
+          uri: models/quickstart/language_modeling/tensorflow/bert_large/inference/cpu/bfloat16/.docs/datasets.md
+        - name: Quick Start Scripts
+          uri: models/quickstart/language_modeling/tensorflow/bert_large/inference/cpu/bfloat16/.docs/quickstart.md
+        - name: Bare Metal
+          uri: models/quickstart/language_modeling/tensorflow/bert_large/inference/cpu/bfloat16/.docs/baremetal.md
+        - name: Docker
+          uri: models/quickstart/language_modeling/tensorflow/bert_large/inference/cpu/bfloat16/.docs/docker.md
+        - name: License
+          uri: models/quickstart/language_modeling/tensorflow/bert_large/inference/cpu/bfloat16/.docs/license.md
+        name: README.md
+        text_replace:
+          <docker image>: 'intel/language-modeling:tf-2.4.0-bert-large-bfloat16-inference'
+          <mode>: inference
+          <model name>: BERT Large
+          <package dir>: bert-large-bfloat16-inference
+          <package name>: bert-large-bfloat16-inference.tar.gz
+          <package url>: 'https://storage.googleapis.com/intel-optimized-tensorflow/models/v2_3_0/bert-large-bfloat16-inference.tar.gz'
+          <precision>: BFloat16
+          <use case>: language_modeling
+        uri: models/quickstart/language_modeling/tensorflow/bert_large/inference/cpu/bfloat16
     downloads:
     - source: https://storage.googleapis.com/intel-optimized-tensorflow/models/v1_6_1/bert_large_checkpoints.zip
       destination: pretrained_model/bert_large_checkpoints.zip
