--- a/tools/docker/specs/tensorflow/bert-large-fp32-inference_spec.yml
+++ b/tools/docker/specs/tensorflow/bert-large-fp32-inference_spec.yml
@@ -40,31 +40,31 @@ slice_sets:
     - unzip
     - entrypoint
     documentation:
-      name: README.md
-      uri: models/quickstart/language_modeling/tensorflow/bert_large/inference/cpu/fp32
-      text_replace:
-        <mode>: inference
-        <model name>: BERT Large
-        <precision>: FP32
-        <use case>: language_modeling
-        <package url>: https://storage.googleapis.com/intel-optimized-tensorflow/models/v2_3_0/bert-large-fp32-inference.tar.gz
-        <package name>: bert-large-fp32-inference.tar.gz
-        <package dir>: bert-large-fp32-inference
-        <docker image>: intel/language-modeling:tf-2.4.0-bert-large-fp32-inference
-      docs:
-      - name: Title
-        uri: models/quickstart/language_modeling/tensorflow/bert_large/inference/cpu/fp32/.docs/title.md
-      - name: Description
-        uri: models/quickstart/language_modeling/tensorflow/bert_large/inference/cpu/fp32/.docs/description.md
-      - name: Download link
-        uri: models/quickstart/language_modeling/tensorflow/bert_large/inference/cpu/fp32/.docs/download.md
-      - name: Datasets
-        uri: models/quickstart/language_modeling/tensorflow/bert_large/inference/cpu/fp32/.docs/datasets.md
-      - name: Quick Start Scripts
-        uri: models/quickstart/language_modeling/tensorflow/bert_large/inference/cpu/fp32/.docs/quickstart.md
-      - name: Bare Metal
-        uri: models/quickstart/language_modeling/tensorflow/bert_large/inference/cpu/fp32/.docs/baremetal.md
-      - name: Docker
-        uri: models/quickstart/language_modeling/tensorflow/bert_large/inference/cpu/fp32/.docs/docker.md
-      - name: License link
-        uri: models/quickstart/image_recognition/tensorflow/resnet50v1_5/training/cpu/fp32/.docs/license.md
+      - name: README.md
+        uri: models/quickstart/language_modeling/tensorflow/bert_large/inference/cpu/fp32
+        text_replace:
+          <mode>: inference
+          <model name>: BERT Large
+          <precision>: FP32
+          <use case>: language_modeling
+          <package url>: https://storage.googleapis.com/intel-optimized-tensorflow/models/v2_3_0/bert-large-fp32-inference.tar.gz
+          <package name>: bert-large-fp32-inference.tar.gz
+          <package dir>: bert-large-fp32-inference
+          <docker image>: intel/language-modeling:tf-2.4.0-bert-large-fp32-inference
+        docs:
+        - name: Title
+          uri: models/quickstart/language_modeling/tensorflow/bert_large/inference/cpu/fp32/.docs/title.md
+        - name: Description
+          uri: models/quickstart/language_modeling/tensorflow/bert_large/inference/cpu/fp32/.docs/description.md
+        - name: Download link
+          uri: models/quickstart/language_modeling/tensorflow/bert_large/inference/cpu/fp32/.docs/download.md
+        - name: Datasets
+          uri: models/quickstart/language_modeling/tensorflow/bert_large/inference/cpu/fp32/.docs/datasets.md
+        - name: Quick Start Scripts
+          uri: models/quickstart/language_modeling/tensorflow/bert_large/inference/cpu/fp32/.docs/quickstart.md
+        - name: Bare Metal
+          uri: models/quickstart/language_modeling/tensorflow/bert_large/inference/cpu/fp32/.docs/baremetal.md
+        - name: Docker
+          uri: models/quickstart/language_modeling/tensorflow/bert_large/inference/cpu/fp32/.docs/docker.md
+        - name: License link
+          uri: models/quickstart/image_recognition/tensorflow/resnet50v1_5/training/cpu/fp32/.docs/license.md
