--- a/tools/docker/specs/tensorflow/faster-rcnn-int8-inference_spec.yml
+++ b/tools/docker/specs/tensorflow/faster-rcnn-int8-inference_spec.yml
@@ -11,34 +11,34 @@ slice_sets:
     - TENSORFLOW_TAG=1.15.2
     dockerfile_subdirectory: model_containers
     documentation:
-      docs:
-      - name: Title
-        uri: models/quickstart/object_detection/tensorflow/faster_rcnn/inference/cpu/int8/.docs/title.md
-      - name: Description
-        uri: models/quickstart/object_detection/tensorflow/faster_rcnn/inference/cpu/int8/.docs/description.md
-      - name: Download link
-        uri: models/quickstart/object_detection/tensorflow/faster_rcnn/inference/cpu/int8/.docs/download.md
-      - name: Datasets
-        uri: models/quickstart/object_detection/tensorflow/faster_rcnn/inference/cpu/int8/.docs/datasets.md
-      - name: Quick Start Scripts
-        uri: models/quickstart/object_detection/tensorflow/faster_rcnn/inference/cpu/int8/.docs/quickstart.md
-      - name: Bare Metal
-        uri: models/quickstart/object_detection/tensorflow/faster_rcnn/inference/cpu/int8/.docs/baremetal.md
-      - name: Docker
-        uri: models/quickstart/object_detection/tensorflow/faster_rcnn/inference/cpu/int8/.docs/docker.md
-      - name: License
-        uri: models/quickstart/object_detection/tensorflow/faster_rcnn/inference/cpu/int8/.docs/license.md
-      name: README.md
-      text_replace:
-        <docker image>: intel/object-detection:tf-1.15.2-faster-rcnn-int8-inference
-        <mode>: inference
-        <model name>: Faster_RCNN
-        <package dir>: faster_rcnn-int8-inference
-        <package name>: faster_rcnn-int8-inference.tar.gz
-        <package url>: https://storage.googleapis.com/intel-optimized-tensorflow/models/v2_3_0/faster-rcnn-int8-inference.tar.gz
-        <precision>: Int8
-        <use case>: object_detection
-      uri: models/quickstart/object_detection/tensorflow/faster_rcnn/inference/cpu/int8
+      - docs:
+        - name: Title
+          uri: models/quickstart/object_detection/tensorflow/faster_rcnn/inference/cpu/int8/.docs/title.md
+        - name: Description
+          uri: models/quickstart/object_detection/tensorflow/faster_rcnn/inference/cpu/int8/.docs/description.md
+        - name: Download link
+          uri: models/quickstart/object_detection/tensorflow/faster_rcnn/inference/cpu/int8/.docs/download.md
+        - name: Datasets
+          uri: models/quickstart/object_detection/tensorflow/faster_rcnn/inference/cpu/int8/.docs/datasets.md
+        - name: Quick Start Scripts
+          uri: models/quickstart/object_detection/tensorflow/faster_rcnn/inference/cpu/int8/.docs/quickstart.md
+        - name: Bare Metal
+          uri: models/quickstart/object_detection/tensorflow/faster_rcnn/inference/cpu/int8/.docs/baremetal.md
+        - name: Docker
+          uri: models/quickstart/object_detection/tensorflow/faster_rcnn/inference/cpu/int8/.docs/docker.md
+        - name: License
+          uri: models/quickstart/object_detection/tensorflow/faster_rcnn/inference/cpu/int8/.docs/license.md
+        name: README.md
+        text_replace:
+          <docker image>: intel/object-detection:tf-1.15.2-faster-rcnn-int8-inference
+          <mode>: inference
+          <model name>: Faster_RCNN
+          <package dir>: faster_rcnn-int8-inference
+          <package name>: faster_rcnn-int8-inference.tar.gz
+          <package url>: https://storage.googleapis.com/intel-optimized-tensorflow/models/v2_3_0/faster-rcnn-int8-inference.tar.gz
+          <precision>: Int8
+          <use case>: object_detection
+        uri: models/quickstart/object_detection/tensorflow/faster_rcnn/inference/cpu/int8
     downloads:
     - destination: faster_rcnn_int8_pretrained_model.pb
       source: https://storage.googleapis.com/intel-optimized-tensorflow/models/faster_rcnn_int8_pretrained_model.pb
