--- a/tools/docker/specs/tensorflow/inceptionv4-int8-inference_spec.yml
+++ b/tools/docker/specs/tensorflow/inceptionv4-int8-inference_spec.yml
@@ -9,34 +9,34 @@ slice_sets:
     - PACKAGE_NAME=inceptionv4-int8-inference
     dockerfile_subdirectory: model_containers
     documentation:
-      docs:
-      - name: Title
-        uri: models/quickstart/image_recognition/tensorflow/inceptionv4/inference/cpu/int8/.docs/title.md
-      - name: Description
-        uri: models/quickstart/image_recognition/tensorflow/inceptionv4/inference/cpu/int8/.docs/description.md
-      - name: Download link
-        uri: models/quickstart/image_recognition/tensorflow/inceptionv4/inference/cpu/int8/.docs/download.md
-      - name: Datasets
-        uri: models/quickstart/image_recognition/tensorflow/inceptionv4/inference/cpu/int8/.docs/datasets.md
-      - name: Quick Start Scripts
-        uri: models/quickstart/image_recognition/tensorflow/inceptionv4/inference/cpu/int8/.docs/quickstart.md
-      - name: Bare Metal
-        uri: models/quickstart/image_recognition/tensorflow/inceptionv4/inference/cpu/int8/.docs/baremetal.md
-      - name: Docker
-        uri: models/quickstart/image_recognition/tensorflow/inceptionv4/inference/cpu/int8/.docs/docker.md
-      - name: License
-        uri: models/quickstart/image_recognition/tensorflow/inceptionv4/inference/cpu/int8/.docs/license.md
-      name: README.md
-      text_replace:
-        <docker image>: intel/image-recognition:tf-2.4.0-inceptionv4-int8-inference
-        <mode>: inference
-        <model name>: Inception V4
-        <package dir>: inceptionv4-int8-inference
-        <package name>: inceptionv4-int8-inference.tar.gz
-        <package url>: https://storage.googleapis.com/intel-optimized-tensorflow/models/v2_3_0/inceptionv4-int8-inference.tar.gz
-        <precision>: Int8
-        <use case>: image_recognition
-      uri: models/quickstart/image_recognition/tensorflow/inceptionv4/inference/cpu/int8
+      - docs:
+        - name: Title
+          uri: models/quickstart/image_recognition/tensorflow/inceptionv4/inference/cpu/int8/.docs/title.md
+        - name: Description
+          uri: models/quickstart/image_recognition/tensorflow/inceptionv4/inference/cpu/int8/.docs/description.md
+        - name: Download link
+          uri: models/quickstart/image_recognition/tensorflow/inceptionv4/inference/cpu/int8/.docs/download.md
+        - name: Datasets
+          uri: models/quickstart/image_recognition/tensorflow/inceptionv4/inference/cpu/int8/.docs/datasets.md
+        - name: Quick Start Scripts
+          uri: models/quickstart/image_recognition/tensorflow/inceptionv4/inference/cpu/int8/.docs/quickstart.md
+        - name: Bare Metal
+          uri: models/quickstart/image_recognition/tensorflow/inceptionv4/inference/cpu/int8/.docs/baremetal.md
+        - name: Docker
+          uri: models/quickstart/image_recognition/tensorflow/inceptionv4/inference/cpu/int8/.docs/docker.md
+        - name: License
+          uri: models/quickstart/image_recognition/tensorflow/inceptionv4/inference/cpu/int8/.docs/license.md
+        name: README.md
+        text_replace:
+          <docker image>: intel/image-recognition:tf-2.4.0-inceptionv4-int8-inference
+          <mode>: inference
+          <model name>: Inception V4
+          <package dir>: inceptionv4-int8-inference
+          <package name>: inceptionv4-int8-inference.tar.gz
+          <package url>: https://storage.googleapis.com/intel-optimized-tensorflow/models/v2_3_0/inceptionv4-int8-inference.tar.gz
+          <precision>: Int8
+          <use case>: image_recognition
+        uri: models/quickstart/image_recognition/tensorflow/inceptionv4/inference/cpu/int8
     downloads:
     - destination: inceptionv4_int8_pretrained_model.pb
       source: https://storage.googleapis.com/intel-optimized-tensorflow/models/v1_8/inceptionv4_int8_pretrained_model.pb
