--- a/tools/docker/specs/tensorflow/mlperf-gnmt-fp32-inference_spec.yml
+++ b/tools/docker/specs/tensorflow/mlperf-gnmt-fp32-inference_spec.yml
@@ -9,34 +9,34 @@ slice_sets:
     - PACKAGE_NAME=mlperf-gnmt-fp32-inference
     dockerfile_subdirectory: model_containers
     documentation:
-      docs:
-      - name: Title
-        uri: models/quickstart/language_translation/tensorflow/mlperf_gnmt/inference/cpu/fp32/.docs/title.md
-      - name: Description
-        uri: models/quickstart/language_translation/tensorflow/mlperf_gnmt/inference/cpu/fp32/.docs/description.md
-      - name: Download link
-        uri: models/quickstart/language_translation/tensorflow/mlperf_gnmt/inference/cpu/fp32/.docs/download.md
-      - name: Datasets
-        uri: models/quickstart/language_translation/tensorflow/mlperf_gnmt/inference/cpu/fp32/.docs/datasets.md
-      - name: Quick Start Scripts
-        uri: models/quickstart/language_translation/tensorflow/mlperf_gnmt/inference/cpu/fp32/.docs/quickstart.md
-      - name: Bare Metal
-        uri: models/quickstart/language_translation/tensorflow/mlperf_gnmt/inference/cpu/fp32/.docs/baremetal.md
-      - name: Docker
-        uri: models/quickstart/language_translation/tensorflow/mlperf_gnmt/inference/cpu/fp32/.docs/docker.md
-      - name: License
-        uri: models/quickstart/language_translation/tensorflow/mlperf_gnmt/inference/cpu/fp32/.docs/license.md
-      name: README.md
-      text_replace:
-        <docker image>: 'intel/language-translation:tf-2.4.0-mlperf-gnmt-fp32-inference'
-        <mode>: inference
-        <model name>: MLPerf GNMT
-        <package dir>: mlperf-gnmt-fp32-inference
-        <package name>: mlperf-gnmt-fp32-inference.tar.gz
-        <package url>: 'https://storage.googleapis.com/intel-optimized-tensorflow/models/v2_3_0/mlperf-gnmt-fp32-inference.tar.gz'
-        <precision>: FP32
-        <use case>: language_translation
-      uri: models/quickstart/language_translation/tensorflow/mlperf_gnmt/inference/cpu/fp32
+      - docs:
+        - name: Title
+          uri: models/quickstart/language_translation/tensorflow/mlperf_gnmt/inference/cpu/fp32/.docs/title.md
+        - name: Description
+          uri: models/quickstart/language_translation/tensorflow/mlperf_gnmt/inference/cpu/fp32/.docs/description.md
+        - name: Download link
+          uri: models/quickstart/language_translation/tensorflow/mlperf_gnmt/inference/cpu/fp32/.docs/download.md
+        - name: Datasets
+          uri: models/quickstart/language_translation/tensorflow/mlperf_gnmt/inference/cpu/fp32/.docs/datasets.md
+        - name: Quick Start Scripts
+          uri: models/quickstart/language_translation/tensorflow/mlperf_gnmt/inference/cpu/fp32/.docs/quickstart.md
+        - name: Bare Metal
+          uri: models/quickstart/language_translation/tensorflow/mlperf_gnmt/inference/cpu/fp32/.docs/baremetal.md
+        - name: Docker
+          uri: models/quickstart/language_translation/tensorflow/mlperf_gnmt/inference/cpu/fp32/.docs/docker.md
+        - name: License
+          uri: models/quickstart/language_translation/tensorflow/mlperf_gnmt/inference/cpu/fp32/.docs/license.md
+        name: README.md
+        text_replace:
+          <docker image>: 'intel/language-translation:tf-2.4.0-mlperf-gnmt-fp32-inference'
+          <mode>: inference
+          <model name>: MLPerf GNMT
+          <package dir>: mlperf-gnmt-fp32-inference
+          <package name>: mlperf-gnmt-fp32-inference.tar.gz
+          <package url>: 'https://storage.googleapis.com/intel-optimized-tensorflow/models/v2_3_0/mlperf-gnmt-fp32-inference.tar.gz'
+          <precision>: FP32
+          <use case>: language_translation
+        uri: models/quickstart/language_translation/tensorflow/mlperf_gnmt/inference/cpu/fp32
     downloads:
     - source: https://storage.googleapis.com/intel-optimized-tensorflow/models/v1_8/mlperf_gnmt_fp32_pretrained_model.pb
       destination: mlperf_gnmt_fp32_pretrained_model.pb
