--- a/tools/docker/specs/tensorflow/resnet101-fp32-inference_spec.yml
+++ b/tools/docker/specs/tensorflow/resnet101-fp32-inference_spec.yml
@@ -9,34 +9,34 @@ slice_sets:
     - PACKAGE_NAME=resnet101-fp32-inference
     dockerfile_subdirectory: model_containers
     documentation:
-      docs:
-      - name: Title
-        uri: models/quickstart/image_recognition/tensorflow/resnet101/inference/cpu/fp32/.docs/title.md
-      - name: Description
-        uri: models/quickstart/image_recognition/tensorflow/resnet101/inference/cpu/fp32/.docs/description.md
-      - name: Download link
-        uri: models/quickstart/image_recognition/tensorflow/resnet101/inference/cpu/fp32/.docs/download.md
-      - name: Datasets
-        uri: models/quickstart/image_recognition/tensorflow/resnet101/inference/cpu/fp32/.docs/datasets.md
-      - name: Quick Start Scripts
-        uri: models/quickstart/image_recognition/tensorflow/resnet101/inference/cpu/fp32/.docs/quickstart.md
-      - name: Bare Metal
-        uri: models/quickstart/image_recognition/tensorflow/resnet101/inference/cpu/fp32/.docs/baremetal.md
-      - name: Docker
-        uri: models/quickstart/image_recognition/tensorflow/resnet101/inference/cpu/fp32/.docs/docker.md
-      - name: License
-        uri: models/quickstart/image_recognition/tensorflow/resnet101/inference/cpu/fp32/.docs/license.md
-      name: README.md
-      text_replace:
-        <docker image>: intel/image-recognition:tf-2.4.0-resnet101-fp32-inference
-        <mode>: inference
-        <model name>: ResNet101
-        <package dir>: resnet101-fp32-inference
-        <package name>: resnet101-fp32-inference.tar.gz
-        <package url>: https://storage.googleapis.com/intel-optimized-tensorflow/models/v2_3_0/resnet101-fp32-inference.tar.gz
-        <precision>: FP32
-        <use case>: image_recognition
-      uri: models/quickstart/image_recognition/tensorflow/resnet101/inference/cpu/fp32
+      - docs:
+        - name: Title
+          uri: models/quickstart/image_recognition/tensorflow/resnet101/inference/cpu/fp32/.docs/title.md
+        - name: Description
+          uri: models/quickstart/image_recognition/tensorflow/resnet101/inference/cpu/fp32/.docs/description.md
+        - name: Download link
+          uri: models/quickstart/image_recognition/tensorflow/resnet101/inference/cpu/fp32/.docs/download.md
+        - name: Datasets
+          uri: models/quickstart/image_recognition/tensorflow/resnet101/inference/cpu/fp32/.docs/datasets.md
+        - name: Quick Start Scripts
+          uri: models/quickstart/image_recognition/tensorflow/resnet101/inference/cpu/fp32/.docs/quickstart.md
+        - name: Bare Metal
+          uri: models/quickstart/image_recognition/tensorflow/resnet101/inference/cpu/fp32/.docs/baremetal.md
+        - name: Docker
+          uri: models/quickstart/image_recognition/tensorflow/resnet101/inference/cpu/fp32/.docs/docker.md
+        - name: License
+          uri: models/quickstart/image_recognition/tensorflow/resnet101/inference/cpu/fp32/.docs/license.md
+        name: README.md
+        text_replace:
+          <docker image>: intel/image-recognition:tf-2.4.0-resnet101-fp32-inference
+          <mode>: inference
+          <model name>: ResNet101
+          <package dir>: resnet101-fp32-inference
+          <package name>: resnet101-fp32-inference.tar.gz
+          <package url>: https://storage.googleapis.com/intel-optimized-tensorflow/models/v2_3_0/resnet101-fp32-inference.tar.gz
+          <precision>: FP32
+          <use case>: image_recognition
+        uri: models/quickstart/image_recognition/tensorflow/resnet101/inference/cpu/fp32
     downloads:
     - destination: resnet101_fp32_pretrained_model.pb
       source: https://storage.googleapis.com/intel-optimized-tensorflow/models/v1_8/resnet101_fp32_pretrained_model.pb
