--- a/tools/docker/specs/tensorflow/resnet50v1-5-bfloat16-inference_spec.yml
+++ b/tools/docker/specs/tensorflow/resnet50v1-5-bfloat16-inference_spec.yml
@@ -9,34 +9,34 @@ slice_sets:
     - PACKAGE_NAME=resnet50v1-5-bfloat16-inference
     dockerfile_subdirectory: model_containers
     documentation:
-      docs:
-      - name: Title
-        uri: models/quickstart/image_recognition/tensorflow/resnet50v1_5/inference/cpu/bfloat16/.docs/title.md
-      - name: Description
-        uri: models/quickstart/image_recognition/tensorflow/resnet50v1_5/inference/cpu/bfloat16/.docs/description.md
-      - name: Download link
-        uri: models/quickstart/image_recognition/tensorflow/resnet50v1_5/inference/cpu/bfloat16/.docs/download.md
-      - name: Datasets
-        uri: models/quickstart/image_recognition/tensorflow/resnet50v1_5/inference/cpu/bfloat16/.docs/datasets.md
-      - name: Quick Start Scripts
-        uri: models/quickstart/image_recognition/tensorflow/resnet50v1_5/inference/cpu/bfloat16/.docs/quickstart.md
-      - name: Bare Metal
-        uri: models/quickstart/image_recognition/tensorflow/resnet50v1_5/inference/cpu/bfloat16/.docs/baremetal.md
-      - name: Docker
-        uri: models/quickstart/image_recognition/tensorflow/resnet50v1_5/inference/cpu/bfloat16/.docs/docker.md
-      - name: License
-        uri: models/quickstart/image_recognition/tensorflow/resnet50v1_5/inference/cpu/bfloat16/.docs/license.md
-      name: README.md
-      text_replace:
-        <docker image>: intel/image-recognition:tf-2.4.0-resnet50v1-5-bfloat16-inference
-        <mode>: inference
-        <model name>: ResNet50 v1.5
-        <package dir>: resnet50v1_5-bfloat16-inference
-        <package name>: resnet50v1_5-bfloat16-inference.tar.gz
-        <package url>: https://storage.googleapis.com/intel-optimized-tensorflow/models/v2_3_0/resnet50v1-5-bfloat16-inference.tar.gz
-        <precision>: BFloat16
-        <use case>: image_recognition
-      uri: models/quickstart/image_recognition/tensorflow/resnet50v1_5/inference/cpu/bfloat16
+      - docs:
+        - name: Title
+          uri: models/quickstart/image_recognition/tensorflow/resnet50v1_5/inference/cpu/bfloat16/.docs/title.md
+        - name: Description
+          uri: models/quickstart/image_recognition/tensorflow/resnet50v1_5/inference/cpu/bfloat16/.docs/description.md
+        - name: Download link
+          uri: models/quickstart/image_recognition/tensorflow/resnet50v1_5/inference/cpu/bfloat16/.docs/download.md
+        - name: Datasets
+          uri: models/quickstart/image_recognition/tensorflow/resnet50v1_5/inference/cpu/bfloat16/.docs/datasets.md
+        - name: Quick Start Scripts
+          uri: models/quickstart/image_recognition/tensorflow/resnet50v1_5/inference/cpu/bfloat16/.docs/quickstart.md
+        - name: Bare Metal
+          uri: models/quickstart/image_recognition/tensorflow/resnet50v1_5/inference/cpu/bfloat16/.docs/baremetal.md
+        - name: Docker
+          uri: models/quickstart/image_recognition/tensorflow/resnet50v1_5/inference/cpu/bfloat16/.docs/docker.md
+        - name: License
+          uri: models/quickstart/image_recognition/tensorflow/resnet50v1_5/inference/cpu/bfloat16/.docs/license.md
+        name: README.md
+        text_replace:
+          <docker image>: intel/image-recognition:tf-2.4.0-resnet50v1-5-bfloat16-inference
+          <mode>: inference
+          <model name>: ResNet50 v1.5
+          <package dir>: resnet50v1_5-bfloat16-inference
+          <package name>: resnet50v1_5-bfloat16-inference.tar.gz
+          <package url>: https://storage.googleapis.com/intel-optimized-tensorflow/models/v2_3_0/resnet50v1-5-bfloat16-inference.tar.gz
+          <precision>: BFloat16
+          <use case>: image_recognition
+        uri: models/quickstart/image_recognition/tensorflow/resnet50v1_5/inference/cpu/bfloat16
     downloads:
     - destination: resnet50_v1_5_bfloat16.pb
       source: https://storage.googleapis.com/intel-optimized-tensorflow/models/v1_8/resnet50_v1_5_bfloat16.pb
