--- a/tools/docker/specs/tensorflow/rfcn-int8-inference_spec.yml
+++ b/tools/docker/specs/tensorflow/rfcn-int8-inference_spec.yml
@@ -10,34 +10,34 @@ slice_sets:
     - TF_MODELS_BRANCH=6c21084503b27a9ab118e1db25f79957d5ef540b
     dockerfile_subdirectory: model_containers
     documentation:
-      docs:
-      - name: Title
-        uri: models/quickstart/object_detection/tensorflow/rfcn/inference/cpu/int8/.docs/title.md
-      - name: Description
-        uri: models/quickstart/object_detection/tensorflow/rfcn/inference/cpu/int8/.docs/description.md
-      - name: Download link
-        uri: models/quickstart/object_detection/tensorflow/rfcn/inference/cpu/int8/.docs/download.md
-      - name: Datasets
-        uri: models/quickstart/object_detection/tensorflow/rfcn/inference/cpu/int8/.docs/datasets.md
-      - name: Quick Start Scripts
-        uri: models/quickstart/object_detection/tensorflow/rfcn/inference/cpu/int8/.docs/quickstart.md
-      - name: Bare Metal
-        uri: models/quickstart/object_detection/tensorflow/rfcn/inference/cpu/int8/.docs/baremetal.md
-      - name: Docker
-        uri: models/quickstart/object_detection/tensorflow/rfcn/inference/cpu/int8/.docs/docker.md
-      - name: License
-        uri: models/quickstart/object_detection/tensorflow/rfcn/inference/cpu/int8/.docs/license.md
-      name: README.md
-      text_replace:
-        <docker image>: intel/object-detection:tf-2.4.0-rfcn-int8-inference
-        <mode>: inference
-        <model name>: RFCN
-        <package dir>: rfcn-int8-inference
-        <package name>: rfcn-int8-inference.tar.gz
-        <package url>: https://storage.googleapis.com/intel-optimized-tensorflow/models/v2_3_0/rfcn-int8-inference.tar.gz
-        <precision>: Int8
-        <use case>: object_detection
-      uri: models/quickstart/object_detection/tensorflow/rfcn/inference/cpu/int8
+      - docs:
+        - name: Title
+          uri: models/quickstart/object_detection/tensorflow/rfcn/inference/cpu/int8/.docs/title.md
+        - name: Description
+          uri: models/quickstart/object_detection/tensorflow/rfcn/inference/cpu/int8/.docs/description.md
+        - name: Download link
+          uri: models/quickstart/object_detection/tensorflow/rfcn/inference/cpu/int8/.docs/download.md
+        - name: Datasets
+          uri: models/quickstart/object_detection/tensorflow/rfcn/inference/cpu/int8/.docs/datasets.md
+        - name: Quick Start Scripts
+          uri: models/quickstart/object_detection/tensorflow/rfcn/inference/cpu/int8/.docs/quickstart.md
+        - name: Bare Metal
+          uri: models/quickstart/object_detection/tensorflow/rfcn/inference/cpu/int8/.docs/baremetal.md
+        - name: Docker
+          uri: models/quickstart/object_detection/tensorflow/rfcn/inference/cpu/int8/.docs/docker.md
+        - name: License
+          uri: models/quickstart/object_detection/tensorflow/rfcn/inference/cpu/int8/.docs/license.md
+        name: README.md
+        text_replace:
+          <docker image>: intel/object-detection:tf-2.4.0-rfcn-int8-inference
+          <mode>: inference
+          <model name>: RFCN
+          <package dir>: rfcn-int8-inference
+          <package name>: rfcn-int8-inference.tar.gz
+          <package url>: https://storage.googleapis.com/intel-optimized-tensorflow/models/v2_3_0/rfcn-int8-inference.tar.gz
+          <precision>: Int8
+          <use case>: object_detection
+        uri: models/quickstart/object_detection/tensorflow/rfcn/inference/cpu/int8
     downloads:
     - destination: rfcn_resnet101_int8_coco_pretrained_model.pb
       source: https://storage.googleapis.com/intel-optimized-tensorflow/models/v1_8/rfcn_resnet101_int8_coco_pretrained_model.pb
