--- a/tools/docker/specs/tensorflow/ssd-mobilenet-fp32-inference_spec.yml
+++ b/tools/docker/specs/tensorflow/ssd-mobilenet-fp32-inference_spec.yml
@@ -52,31 +52,31 @@ slice_sets:
     - model_package
     - entrypoint
     documentation:
-      name: README.md
-      uri: models/quickstart/object_detection/tensorflow/ssd-mobilenet/inference/cpu/fp32
-      text_replace:
-        <model name>: SSD-MobileNet
-        <precision>: FP32
-        <mode>: inference
-        <use case>: object_detection
-        <package url>: https://storage.googleapis.com/intel-optimized-tensorflow/models/v2_3_0/ssd-mobilenet-fp32-inference.tar.gz
-        <package name>: ssd-mobilenet-fp32-inference.tar.gz
-        <package dir>: ssd-mobilenet-fp32-inference
-        <docker image>: intel/object-detection:tf-2.4.0-ssd-mobilenet-fp32-inference
-      docs:
-      - name: Title
-        uri: models/quickstart/object_detection/tensorflow/ssd-mobilenet/inference/cpu/fp32/.docs/title.md
-      - name: Description
-        uri: models/quickstart/object_detection/tensorflow/ssd-mobilenet/inference/cpu/fp32/.docs/description.md
-      - name: Download link
-        uri: models/quickstart/object_detection/tensorflow/ssd-mobilenet/inference/cpu/fp32/.docs/download.md
-      - name: Datasets
-        uri: models/quickstart/object_detection/tensorflow/ssd-mobilenet/inference/cpu/fp32/.docs/datasets.md
-      - name: Quick Start Scripts
-        uri: models/quickstart/object_detection/tensorflow/ssd-mobilenet/inference/cpu/fp32/.docs/quickstart.md
-      - name: Bare Metal
-        uri: models/quickstart/object_detection/tensorflow/ssd-mobilenet/inference/cpu/fp32/.docs/baremetal.md
-      - name: Docker
-        uri: models/quickstart/object_detection/tensorflow/ssd-mobilenet/inference/cpu/fp32/.docs/docker.md
-      - name: License link
-        uri: models/quickstart/object_detection/tensorflow/ssd-mobilenet/inference/cpu/fp32/.docs/license.md
+      - name: README.md
+        uri: models/quickstart/object_detection/tensorflow/ssd-mobilenet/inference/cpu/fp32
+        text_replace:
+          <model name>: SSD-MobileNet
+          <precision>: FP32
+          <mode>: inference
+          <use case>: object_detection
+          <package url>: https://storage.googleapis.com/intel-optimized-tensorflow/models/v2_3_0/ssd-mobilenet-fp32-inference.tar.gz
+          <package name>: ssd-mobilenet-fp32-inference.tar.gz
+          <package dir>: ssd-mobilenet-fp32-inference
+          <docker image>: intel/object-detection:tf-2.4.0-ssd-mobilenet-fp32-inference
+        docs:
+        - name: Title
+          uri: models/quickstart/object_detection/tensorflow/ssd-mobilenet/inference/cpu/fp32/.docs/title.md
+        - name: Description
+          uri: models/quickstart/object_detection/tensorflow/ssd-mobilenet/inference/cpu/fp32/.docs/description.md
+        - name: Download link
+          uri: models/quickstart/object_detection/tensorflow/ssd-mobilenet/inference/cpu/fp32/.docs/download.md
+        - name: Datasets
+          uri: models/quickstart/object_detection/tensorflow/ssd-mobilenet/inference/cpu/fp32/.docs/datasets.md
+        - name: Quick Start Scripts
+          uri: models/quickstart/object_detection/tensorflow/ssd-mobilenet/inference/cpu/fp32/.docs/quickstart.md
+        - name: Bare Metal
+          uri: models/quickstart/object_detection/tensorflow/ssd-mobilenet/inference/cpu/fp32/.docs/baremetal.md
+        - name: Docker
+          uri: models/quickstart/object_detection/tensorflow/ssd-mobilenet/inference/cpu/fp32/.docs/docker.md
+        - name: License link
+          uri: models/quickstart/object_detection/tensorflow/ssd-mobilenet/inference/cpu/fp32/.docs/license.md
