--- a/tools/docker/specs/tensorflow/ssd-resnet34-bfloat16-training_spec.yml
+++ b/tools/docker/specs/tensorflow/ssd-resnet34-bfloat16-training_spec.yml
@@ -12,34 +12,34 @@ slice_sets:
     - HOROVOD_VERSION=0.21.1
     dockerfile_subdirectory: model_containers
     documentation:
-      docs:
-      - name: Title
-        uri: models/quickstart/object_detection/tensorflow/ssd-resnet34/training/cpu/bfloat16/.docs/title.md
-      - name: Description
-        uri: models/quickstart/object_detection/tensorflow/ssd-resnet34/training/cpu/bfloat16/.docs/description.md
-      - name: Download link
-        uri: models/quickstart/object_detection/tensorflow/ssd-resnet34/training/cpu/bfloat16/.docs/download.md
-      - name: Datasets
-        uri: models/quickstart/object_detection/tensorflow/ssd-resnet34/training/cpu/bfloat16/.docs/datasets.md
-      - name: Quick Start Scripts
-        uri: models/quickstart/object_detection/tensorflow/ssd-resnet34/training/cpu/bfloat16/.docs/quickstart.md
-      - name: Bare Metal
-        uri: models/quickstart/object_detection/tensorflow/ssd-resnet34/training/cpu/bfloat16/.docs/baremetal.md
-      - name: Docker
-        uri: models/quickstart/object_detection/tensorflow/ssd-resnet34/training/cpu/bfloat16/.docs/docker.md
-      - name: License
-        uri: models/quickstart/object_detection/tensorflow/ssd-resnet34/training/cpu/bfloat16/.docs/license.md
-      name: README.md
-      text_replace:
-        <docker image>: 'intel/object-detection:tf-2.4.0-ssd-resnet34-bfloat16-training'
-        <mode>: training
-        <model name>: SSD-ResNet34
-        <package dir>: ssd-resnet34-bfloat16-training
-        <package name>: ssd-resnet34-bfloat16-training.tar.gz
-        <package url>: 'https://storage.googleapis.com/intel-optimized-tensorflow/models/v2_3_0/ssd-resnet34-bfloat16-training.tar.gz'
-        <precision>: BFloat16
-        <use case>: object_detection
-      uri: models/quickstart/object_detection/tensorflow/ssd-resnet34/training/cpu/bfloat16
+      - docs:
+        - name: Title
+          uri: models/quickstart/object_detection/tensorflow/ssd-resnet34/training/cpu/bfloat16/.docs/title.md
+        - name: Description
+          uri: models/quickstart/object_detection/tensorflow/ssd-resnet34/training/cpu/bfloat16/.docs/description.md
+        - name: Download link
+          uri: models/quickstart/object_detection/tensorflow/ssd-resnet34/training/cpu/bfloat16/.docs/download.md
+        - name: Datasets
+          uri: models/quickstart/object_detection/tensorflow/ssd-resnet34/training/cpu/bfloat16/.docs/datasets.md
+        - name: Quick Start Scripts
+          uri: models/quickstart/object_detection/tensorflow/ssd-resnet34/training/cpu/bfloat16/.docs/quickstart.md
+        - name: Bare Metal
+          uri: models/quickstart/object_detection/tensorflow/ssd-resnet34/training/cpu/bfloat16/.docs/baremetal.md
+        - name: Docker
+          uri: models/quickstart/object_detection/tensorflow/ssd-resnet34/training/cpu/bfloat16/.docs/docker.md
+        - name: License
+          uri: models/quickstart/object_detection/tensorflow/ssd-resnet34/training/cpu/bfloat16/.docs/license.md
+        name: README.md
+        text_replace:
+          <docker image>: 'intel/object-detection:tf-2.4.0-ssd-resnet34-bfloat16-training'
+          <mode>: training
+          <model name>: SSD-ResNet34
+          <package dir>: ssd-resnet34-bfloat16-training
+          <package name>: ssd-resnet34-bfloat16-training.tar.gz
+          <package url>: 'https://storage.googleapis.com/intel-optimized-tensorflow/models/v2_3_0/ssd-resnet34-bfloat16-training.tar.gz'
+          <precision>: BFloat16
+          <use case>: object_detection
+        uri: models/quickstart/object_detection/tensorflow/ssd-resnet34/training/cpu/bfloat16
     downloads: []
     files:
     - destination: benchmarks/common
