--- a/tools/docker/specs/tensorflow/ssd-resnet34-fp32-inference_spec.yml
+++ b/tools/docker/specs/tensorflow/ssd-resnet34-fp32-inference_spec.yml
@@ -13,36 +13,36 @@ slice_sets:
     - TF_MODELS_BRANCH=f505cecde2d8ebf6fe15f40fb8bc350b2b1ed5dc
     dockerfile_subdirectory: model_containers
     documentation:
-      docs:
-      - name: Title
-        uri: models/quickstart/object_detection/tensorflow/ssd-resnet34/inference/cpu/fp32/.docs/title.md
-      - name: Description
-        uri: models/quickstart/object_detection/tensorflow/ssd-resnet34/inference/cpu/fp32/.docs/description.md
-      - name: Download link
-        uri: models/quickstart/object_detection/tensorflow/ssd-resnet34/inference/cpu/fp32/.docs/download.md
-      - name: Datasets
-        uri: models/quickstart/object_detection/tensorflow/ssd-resnet34/inference/cpu/fp32/.docs/datasets.md
-      - name: Quick Start Scripts
-        uri: models/quickstart/object_detection/tensorflow/ssd-resnet34/inference/cpu/fp32/.docs/quickstart.md
-      - name: Bare Metal
-        uri: models/quickstart/object_detection/tensorflow/ssd-resnet34/inference/cpu/fp32/.docs/baremetal.md
-      - name: Docker
-        uri: models/quickstart/object_detection/tensorflow/ssd-resnet34/inference/cpu/fp32/.docs/docker.md
-      - name: Advanced Options
-        uri: models/quickstart/object_detection/tensorflow/ssd-resnet34/inference/cpu/fp32/.docs/advancedoptions.md
-      - name: License
-        uri: models/quickstart/object_detection/tensorflow/ssd-resnet34/inference/cpu/fp32/.docs/license.md
-      name: README.md
-      text_replace:
-        <mode>: inference
-        <model name>: SSD-ResNet34
-        <precision>: FP32
-        <use case>: object_detection
-        <package url>: https://storage.googleapis.com/intel-optimized-tensorflow/models/v2_3_0/ssd-resnet34-fp32-inference.tar.gz
-        <package name>: ssd-resnet34-fp32-inference.tar.gz
-        <package dir>: ssd-resnet34-fp32-inference
-        <docker image>: intel/object-detection:tf-2.4.0-ssd-resnet34-fp32-inference
-      uri: models/quickstart/object_detection/tensorflow/ssd-resnet34/inference/cpu/fp32
+      - docs:
+        - name: Title
+          uri: models/quickstart/object_detection/tensorflow/ssd-resnet34/inference/cpu/fp32/.docs/title.md
+        - name: Description
+          uri: models/quickstart/object_detection/tensorflow/ssd-resnet34/inference/cpu/fp32/.docs/description.md
+        - name: Download link
+          uri: models/quickstart/object_detection/tensorflow/ssd-resnet34/inference/cpu/fp32/.docs/download.md
+        - name: Datasets
+          uri: models/quickstart/object_detection/tensorflow/ssd-resnet34/inference/cpu/fp32/.docs/datasets.md
+        - name: Quick Start Scripts
+          uri: models/quickstart/object_detection/tensorflow/ssd-resnet34/inference/cpu/fp32/.docs/quickstart.md
+        - name: Bare Metal
+          uri: models/quickstart/object_detection/tensorflow/ssd-resnet34/inference/cpu/fp32/.docs/baremetal.md
+        - name: Docker
+          uri: models/quickstart/object_detection/tensorflow/ssd-resnet34/inference/cpu/fp32/.docs/docker.md
+        - name: Advanced Options
+          uri: models/quickstart/object_detection/tensorflow/ssd-resnet34/inference/cpu/fp32/.docs/advancedoptions.md
+        - name: License
+          uri: models/quickstart/object_detection/tensorflow/ssd-resnet34/inference/cpu/fp32/.docs/license.md
+        name: README.md
+        text_replace:
+          <mode>: inference
+          <model name>: SSD-ResNet34
+          <precision>: FP32
+          <use case>: object_detection
+          <package url>: https://storage.googleapis.com/intel-optimized-tensorflow/models/v2_3_0/ssd-resnet34-fp32-inference.tar.gz
+          <package name>: ssd-resnet34-fp32-inference.tar.gz
+          <package dir>: ssd-resnet34-fp32-inference
+          <docker image>: intel/object-detection:tf-2.4.0-ssd-resnet34-fp32-inference
+        uri: models/quickstart/object_detection/tensorflow/ssd-resnet34/inference/cpu/fp32
     downloads:
     - source: https://storage.googleapis.com/intel-optimized-tensorflow/models/v1_6/ssd_resnet34_fp32_bs1_pretrained_model.pb
       destination: pretrained_model/ssd_resnet34_fp32_bs1_pretrained_model.pb
