--- a/tools/docker/specs/tensorflow/ssd-resnet34-fp32-training_spec.yml
+++ b/tools/docker/specs/tensorflow/ssd-resnet34-fp32-training_spec.yml
@@ -11,34 +11,34 @@ slice_sets:
     - TF_BENCHMARKS_BRANCH=509b9d288937216ca7069f31cfb22aaa7db6a4a7
     dockerfile_subdirectory: model_containers
     documentation:
-      docs:
-      - name: Title
-        uri: models/quickstart/object_detection/tensorflow/ssd-resnet34/training/cpu/fp32/.docs/title.md
-      - name: Description
-        uri: models/quickstart/object_detection/tensorflow/ssd-resnet34/training/cpu/fp32/.docs/description.md
-      - name: Download link
-        uri: models/quickstart/object_detection/tensorflow/ssd-resnet34/training/cpu/fp32/.docs/download.md
-      - name: Datasets
-        uri: models/quickstart/object_detection/tensorflow/ssd-resnet34/training/cpu/fp32/.docs/datasets.md
-      - name: Quick Start Scripts
-        uri: models/quickstart/object_detection/tensorflow/ssd-resnet34/training/cpu/fp32/.docs/quickstart.md
-      - name: Bare Metal
-        uri: models/quickstart/object_detection/tensorflow/ssd-resnet34/training/cpu/fp32/.docs/baremetal.md
-      - name: Docker
-        uri: models/quickstart/object_detection/tensorflow/ssd-resnet34/training/cpu/fp32/.docs/docker.md
-      - name: License
-        uri: models/quickstart/object_detection/tensorflow/ssd-resnet34/training/cpu/fp32/.docs/license.md
-      name: README.md
-      text_replace:
-        <docker image>: 'intel/object-detection:tf-2.4.0-ssd-resnet34-fp32-training'
-        <mode>: training
-        <model name>: SSD-ResNet34
-        <package dir>: ssd-resnet34-fp32-training
-        <package name>: ssd-resnet34-fp32-training.tar.gz
-        <package url>: 'https://storage.googleapis.com/intel-optimized-tensorflow/models/v2_3_0/ssd-resnet34-fp32-training.tar.gz'
-        <precision>: FP32
-        <use case>: object_detection
-      uri: models/quickstart/object_detection/tensorflow/ssd-resnet34/training/cpu/fp32
+      - docs:
+        - name: Title
+          uri: models/quickstart/object_detection/tensorflow/ssd-resnet34/training/cpu/fp32/.docs/title.md
+        - name: Description
+          uri: models/quickstart/object_detection/tensorflow/ssd-resnet34/training/cpu/fp32/.docs/description.md
+        - name: Download link
+          uri: models/quickstart/object_detection/tensorflow/ssd-resnet34/training/cpu/fp32/.docs/download.md
+        - name: Datasets
+          uri: models/quickstart/object_detection/tensorflow/ssd-resnet34/training/cpu/fp32/.docs/datasets.md
+        - name: Quick Start Scripts
+          uri: models/quickstart/object_detection/tensorflow/ssd-resnet34/training/cpu/fp32/.docs/quickstart.md
+        - name: Bare Metal
+          uri: models/quickstart/object_detection/tensorflow/ssd-resnet34/training/cpu/fp32/.docs/baremetal.md
+        - name: Docker
+          uri: models/quickstart/object_detection/tensorflow/ssd-resnet34/training/cpu/fp32/.docs/docker.md
+        - name: License
+          uri: models/quickstart/object_detection/tensorflow/ssd-resnet34/training/cpu/fp32/.docs/license.md
+        name: README.md
+        text_replace:
+          <docker image>: 'intel/object-detection:tf-2.4.0-ssd-resnet34-fp32-training'
+          <mode>: training
+          <model name>: SSD-ResNet34
+          <package dir>: ssd-resnet34-fp32-training
+          <package name>: ssd-resnet34-fp32-training.tar.gz
+          <package url>: 'https://storage.googleapis.com/intel-optimized-tensorflow/models/v2_3_0/ssd-resnet34-fp32-training.tar.gz'
+          <precision>: FP32
+          <use case>: object_detection
+        uri: models/quickstart/object_detection/tensorflow/ssd-resnet34/training/cpu/fp32
     downloads: []
     files:
     - destination: benchmarks/common
