--- a/tools/docker/specs/tensorflow/transformer-mlperf-fp32-training_spec.yml
+++ b/tools/docker/specs/tensorflow/transformer-mlperf-fp32-training_spec.yml
@@ -9,34 +9,34 @@ slice_sets:
     - PACKAGE_NAME=transformer-mlperf-fp32-training
     dockerfile_subdirectory: model_containers
     documentation:
-      docs:
-      - name: Title
-        uri: models/quickstart/language_translation/tensorflow/transformer_mlperf/training/cpu/fp32/.docs/title.md
-      - name: Description
-        uri: models/quickstart/language_translation/tensorflow/transformer_mlperf/training/cpu/fp32/.docs/description.md
-      - name: Download link
-        uri: models/quickstart/language_translation/tensorflow/transformer_mlperf/training/cpu/fp32/.docs/download.md
-      - name: Datasets
-        uri: models/quickstart/language_translation/tensorflow/transformer_mlperf/training/cpu/fp32/.docs/datasets.md
-      - name: Quick Start Scripts
-        uri: models/quickstart/language_translation/tensorflow/transformer_mlperf/training/cpu/fp32/.docs/quickstart.md
-      - name: Bare Metal
-        uri: models/quickstart/language_translation/tensorflow/transformer_mlperf/training/cpu/fp32/.docs/baremetal.md
-      - name: Docker
-        uri: models/quickstart/language_translation/tensorflow/transformer_mlperf/training/cpu/fp32/.docs/docker.md
-      - name: License
-        uri: models/quickstart/language_translation/tensorflow/transformer_mlperf/training/cpu/fp32/.docs/license.md
-      name: README.md
-      text_replace:
-        <docker image>: intel/language-translation:tf-2.4.0-transformer-mlperf-fp32-training
-        <mode>: training
-        <model name>: Transformer Language
-        <package dir>: transformer-mlperf-fp32-training
-        <package name>: transformer-mlperf-fp32-training.tar.gz
-        <package url>: https://storage.googleapis.com/intel-optimized-tensorflow/models/v2_3_0/transformer-mlperf-fp32-training.tar.gz
-        <precision>: FP32
-        <use case>: language_translation
-      uri: models/quickstart/language_translation/tensorflow/transformer_mlperf/training/cpu/fp32
+      - docs:
+        - name: Title
+          uri: models/quickstart/language_translation/tensorflow/transformer_mlperf/training/cpu/fp32/.docs/title.md
+        - name: Description
+          uri: models/quickstart/language_translation/tensorflow/transformer_mlperf/training/cpu/fp32/.docs/description.md
+        - name: Download link
+          uri: models/quickstart/language_translation/tensorflow/transformer_mlperf/training/cpu/fp32/.docs/download.md
+        - name: Datasets
+          uri: models/quickstart/language_translation/tensorflow/transformer_mlperf/training/cpu/fp32/.docs/datasets.md
+        - name: Quick Start Scripts
+          uri: models/quickstart/language_translation/tensorflow/transformer_mlperf/training/cpu/fp32/.docs/quickstart.md
+        - name: Bare Metal
+          uri: models/quickstart/language_translation/tensorflow/transformer_mlperf/training/cpu/fp32/.docs/baremetal.md
+        - name: Docker
+          uri: models/quickstart/language_translation/tensorflow/transformer_mlperf/training/cpu/fp32/.docs/docker.md
+        - name: License
+          uri: models/quickstart/language_translation/tensorflow/transformer_mlperf/training/cpu/fp32/.docs/license.md
+        name: README.md
+        text_replace:
+          <docker image>: intel/language-translation:tf-2.4.0-transformer-mlperf-fp32-training
+          <mode>: training
+          <model name>: Transformer Language
+          <package dir>: transformer-mlperf-fp32-training
+          <package name>: transformer-mlperf-fp32-training.tar.gz
+          <package url>: https://storage.googleapis.com/intel-optimized-tensorflow/models/v2_3_0/transformer-mlperf-fp32-training.tar.gz
+          <precision>: FP32
+          <use case>: language_translation
+        uri: models/quickstart/language_translation/tensorflow/transformer_mlperf/training/cpu/fp32
     downloads: []
     files:
     - destination: benchmarks/common
