--- a/tools/docker/specs/tensorflow/wavenet-fp32-inference_spec.yml
+++ b/tools/docker/specs/tensorflow/wavenet-fp32-inference_spec.yml
@@ -12,32 +12,32 @@ slice_sets:
     - PACKAGE_NAME=wavenet-fp32-inference
     dockerfile_subdirectory: model_containers
     documentation:
-      docs:
-      - name: Title
-        uri: models/quickstart/text_to_speech/tensorflow/wavenet/inference/cpu/fp32/.docs/title.md
-      - name: Description
-        uri: models/quickstart/text_to_speech/tensorflow/wavenet/inference/cpu/fp32/.docs/description.md
-      - name: Download link
-        uri: models/quickstart/text_to_speech/tensorflow/wavenet/inference/cpu/fp32/.docs/download.md
-      - name: Quick Start Scripts
-        uri: models/quickstart/text_to_speech/tensorflow/wavenet/inference/cpu/fp32/.docs/quickstart.md
-      - name: Bare Metal
-        uri: models/quickstart/text_to_speech/tensorflow/wavenet/inference/cpu/fp32/.docs/baremetal.md
-      - name: Docker
-        uri: models/quickstart/text_to_speech/tensorflow/wavenet/inference/cpu/fp32/.docs/docker.md
-      - name: License
-        uri: models/quickstart/text_to_speech/tensorflow/wavenet/inference/cpu/fp32/.docs/license.md
-      name: README.md
-      text_replace:
-        <docker image>: intel/text-to-speech:tf-1.15.2-wavenet-fp32-inference
-        <mode>: inference
-        <model name>: WaveNet
-        <package dir>: wavenet-fp32-inference
-        <package name>: wavenet-fp32-inference.tar.gz
-        <package url>: https://storage.googleapis.com/intel-optimized-tensorflow/models/v2_3_0/wavenet-fp32-inference.tar.gz
-        <precision>: FP32
-        <use case>: text_to_speech
-      uri: models/quickstart/text_to_speech/tensorflow/wavenet/inference/cpu/fp32
+      - docs:
+        - name: Title
+          uri: models/quickstart/text_to_speech/tensorflow/wavenet/inference/cpu/fp32/.docs/title.md
+        - name: Description
+          uri: models/quickstart/text_to_speech/tensorflow/wavenet/inference/cpu/fp32/.docs/description.md
+        - name: Download link
+          uri: models/quickstart/text_to_speech/tensorflow/wavenet/inference/cpu/fp32/.docs/download.md
+        - name: Quick Start Scripts
+          uri: models/quickstart/text_to_speech/tensorflow/wavenet/inference/cpu/fp32/.docs/quickstart.md
+        - name: Bare Metal
+          uri: models/quickstart/text_to_speech/tensorflow/wavenet/inference/cpu/fp32/.docs/baremetal.md
+        - name: Docker
+          uri: models/quickstart/text_to_speech/tensorflow/wavenet/inference/cpu/fp32/.docs/docker.md
+        - name: License
+          uri: models/quickstart/text_to_speech/tensorflow/wavenet/inference/cpu/fp32/.docs/license.md
+        name: README.md
+        text_replace:
+          <docker image>: intel/text-to-speech:tf-1.15.2-wavenet-fp32-inference
+          <mode>: inference
+          <model name>: WaveNet
+          <package dir>: wavenet-fp32-inference
+          <package name>: wavenet-fp32-inference.tar.gz
+          <package url>: https://storage.googleapis.com/intel-optimized-tensorflow/models/v2_3_0/wavenet-fp32-inference.tar.gz
+          <precision>: FP32
+          <use case>: text_to_speech
+        uri: models/quickstart/text_to_speech/tensorflow/wavenet/inference/cpu/fp32
     downloads:
     - destination: pretrained_model/wavenet_fp32_pretrained_model.tar.gz
       source: https://storage.googleapis.com/intel-optimized-tensorflow/models/wavenet_fp32_pretrained_model.tar.gz
