--- a/tools/docker/specs/tensorflow/wide-deep-large-ds-fp32-inference_spec.yml
+++ b/tools/docker/specs/tensorflow/wide-deep-large-ds-fp32-inference_spec.yml
@@ -10,34 +10,34 @@ slice_sets:
     - PACKAGE_NAME=wide-deep-large-ds-fp32-inference
     dockerfile_subdirectory: model_containers
     documentation:
-      docs:
-      - name: Title
-        uri: models/quickstart/recommendation/tensorflow/wide_deep_large_ds/inference/cpu/fp32/.docs/title.md
-      - name: Description
-        uri: models/quickstart/recommendation/tensorflow/wide_deep_large_ds/inference/cpu/fp32/.docs/description.md
-      - name: Download link
-        uri: models/quickstart/recommendation/tensorflow/wide_deep_large_ds/inference/cpu/fp32/.docs/download.md
-      - name: Datasets
-        uri: models/quickstart/recommendation/tensorflow/wide_deep_large_ds/inference/cpu/fp32/.docs/datasets.md
-      - name: Quick Start Scripts
-        uri: models/quickstart/recommendation/tensorflow/wide_deep_large_ds/inference/cpu/fp32/.docs/quickstart.md
-      - name: Bare Metal
-        uri: models/quickstart/recommendation/tensorflow/wide_deep_large_ds/inference/cpu/fp32/.docs/baremetal.md
-      - name: Docker
-        uri: models/quickstart/recommendation/tensorflow/wide_deep_large_ds/inference/cpu/fp32/.docs/docker.md
-      - name: License
-        uri: models/quickstart/recommendation/tensorflow/wide_deep_large_ds/inference/cpu/fp32/.docs/license.md
-      name: README.md
-      text_replace:
-        <docker image>: intel/recommendation:tf-1.15.2-wide-deep-large-ds-fp32-inference
-        <mode>: inference
-        <model name>:  Wide and Deep using a large dataset
-        <package dir>: wide-deep-large-ds-fp32-inference
-        <package name>: wide-deep-large-ds-fp32-inference.tar.gz
-        <package url>: https://storage.googleapis.com/intel-optimized-tensorflow/models/v2_3_0/wide-deep-large-ds-fp32-inference.tar.gz
-        <precision>: FP32
-        <use case>: recommendation
-      uri: models/quickstart/recommendation/tensorflow/wide_deep_large_ds/inference/cpu/fp32
+      - docs:
+        - name: Title
+          uri: models/quickstart/recommendation/tensorflow/wide_deep_large_ds/inference/cpu/fp32/.docs/title.md
+        - name: Description
+          uri: models/quickstart/recommendation/tensorflow/wide_deep_large_ds/inference/cpu/fp32/.docs/description.md
+        - name: Download link
+          uri: models/quickstart/recommendation/tensorflow/wide_deep_large_ds/inference/cpu/fp32/.docs/download.md
+        - name: Datasets
+          uri: models/quickstart/recommendation/tensorflow/wide_deep_large_ds/inference/cpu/fp32/.docs/datasets.md
+        - name: Quick Start Scripts
+          uri: models/quickstart/recommendation/tensorflow/wide_deep_large_ds/inference/cpu/fp32/.docs/quickstart.md
+        - name: Bare Metal
+          uri: models/quickstart/recommendation/tensorflow/wide_deep_large_ds/inference/cpu/fp32/.docs/baremetal.md
+        - name: Docker
+          uri: models/quickstart/recommendation/tensorflow/wide_deep_large_ds/inference/cpu/fp32/.docs/docker.md
+        - name: License
+          uri: models/quickstart/recommendation/tensorflow/wide_deep_large_ds/inference/cpu/fp32/.docs/license.md
+        name: README.md
+        text_replace:
+          <docker image>: intel/recommendation:tf-1.15.2-wide-deep-large-ds-fp32-inference
+          <mode>: inference
+          <model name>:  Wide and Deep using a large dataset
+          <package dir>: wide-deep-large-ds-fp32-inference
+          <package name>: wide-deep-large-ds-fp32-inference.tar.gz
+          <package url>: https://storage.googleapis.com/intel-optimized-tensorflow/models/v2_3_0/wide-deep-large-ds-fp32-inference.tar.gz
+          <precision>: FP32
+          <use case>: recommendation
+        uri: models/quickstart/recommendation/tensorflow/wide_deep_large_ds/inference/cpu/fp32
     downloads:
     - destination: wide_deep_fp32_pretrained_model.pb
       source: https://storage.googleapis.com/intel-optimized-tensorflow/models/v1_8/wide_deep_fp32_pretrained_model.pb
