--- a/tools/docker/specs/tensorflow/wide-deep-large-ds-fp32-training_spec.yml
+++ b/tools/docker/specs/tensorflow/wide-deep-large-ds-fp32-training_spec.yml
@@ -39,33 +39,33 @@ slice_sets:
     - model_package
     - entrypoint
     documentation:
-      name: README.md
-      uri: models/quickstart/recommendation/tensorflow/wide_deep_large_ds/training/cpu/fp32
-      text_replace:
-        <mode>: training
-        <model name>: Wide and Deep Large Dataset
-        <precision>: FP32
-        <use case>: recommendation
-        <package url>: https://storage.googleapis.com/intel-optimized-tensorflow/models/v2_3_0/wide-deep-large-ds-fp32-training.tar.gz
-        <package name>: wide-deep-large-ds-fp32-training.tar.gz
-        <package dir>: wide-deep-large-ds-fp32-training
-        <docker image>: intel/recommendation:tf-2.4.0-wide-deep-large-ds-fp32-training
-      docs:
-      - name: Title
-        uri: models/quickstart/recommendation/tensorflow/wide_deep_large_ds/training/cpu/fp32/.docs/title.md
-      - name: Description
-        uri: models/quickstart/recommendation/tensorflow/wide_deep_large_ds/training/cpu/fp32/.docs/description.md
-      - name: Download link
-        uri: models/quickstart/recommendation/tensorflow/wide_deep_large_ds/training/cpu/fp32/.docs/download.md
-      - name: Datasets
-        uri: models/quickstart/recommendation/tensorflow/wide_deep_large_ds/training/cpu/fp32/.docs/datasets.md
-      - name: Quick Start Scripts
-        uri: models/quickstart/recommendation/tensorflow/wide_deep_large_ds/training/cpu/fp32/.docs/quickstart.md
-      - name: Bare Metal
-        uri: models/quickstart/recommendation/tensorflow/wide_deep_large_ds/training/cpu/fp32/.docs/baremetal.md
-      - name: Docker
-        uri: models/quickstart/recommendation/tensorflow/wide_deep_large_ds/training/cpu/fp32/.docs/docker.md
-      - name: Advanced Options
-        uri: models/quickstart/recommendation/tensorflow/wide_deep_large_ds/training/cpu/fp32/.docs/advancedoptions.md
-      - name: License link
-        uri: models/quickstart/recommendation/tensorflow/wide_deep_large_ds/training/cpu/fp32/.docs/license.md
+      - name: README.md
+        uri: models/quickstart/recommendation/tensorflow/wide_deep_large_ds/training/cpu/fp32
+        text_replace:
+          <mode>: training
+          <model name>: Wide and Deep Large Dataset
+          <precision>: FP32
+          <use case>: recommendation
+          <package url>: https://storage.googleapis.com/intel-optimized-tensorflow/models/v2_3_0/wide-deep-large-ds-fp32-training.tar.gz
+          <package name>: wide-deep-large-ds-fp32-training.tar.gz
+          <package dir>: wide-deep-large-ds-fp32-training
+          <docker image>: intel/recommendation:tf-2.4.0-wide-deep-large-ds-fp32-training
+        docs:
+        - name: Title
+          uri: models/quickstart/recommendation/tensorflow/wide_deep_large_ds/training/cpu/fp32/.docs/title.md
+        - name: Description
+          uri: models/quickstart/recommendation/tensorflow/wide_deep_large_ds/training/cpu/fp32/.docs/description.md
+        - name: Download link
+          uri: models/quickstart/recommendation/tensorflow/wide_deep_large_ds/training/cpu/fp32/.docs/download.md
+        - name: Datasets
+          uri: models/quickstart/recommendation/tensorflow/wide_deep_large_ds/training/cpu/fp32/.docs/datasets.md
+        - name: Quick Start Scripts
+          uri: models/quickstart/recommendation/tensorflow/wide_deep_large_ds/training/cpu/fp32/.docs/quickstart.md
+        - name: Bare Metal
+          uri: models/quickstart/recommendation/tensorflow/wide_deep_large_ds/training/cpu/fp32/.docs/baremetal.md
+        - name: Docker
+          uri: models/quickstart/recommendation/tensorflow/wide_deep_large_ds/training/cpu/fp32/.docs/docker.md
+        - name: Advanced Options
+          uri: models/quickstart/recommendation/tensorflow/wide_deep_large_ds/training/cpu/fp32/.docs/advancedoptions.md
+        - name: License link
+          uri: models/quickstart/recommendation/tensorflow/wide_deep_large_ds/training/cpu/fp32/.docs/license.md
