Fixes for 3D-Unet Mlperf

--- a/benchmarks/image_segmentation/tensorflow/3d_unet_mlperf/requirements.txt
+++ b/benchmarks/image_segmentation/tensorflow/3d_unet_mlperf/requirements.txt
@@ -8,10 +8,9 @@ nnunet
 torch
 tqdm
 dicom2nifti
-scikit-image>=0.14
+scikit-image
 medpy
 scipy
-batchgenerators>=0.20.0
+batchgenerators
 sklearn
 pandas
-nibabel
