Revert "Merge branch 'kanvi/3d_unet_fixes' into 'develop'"
This reverts commit ed51f34fd09edc474abb5fb852aaedc6ad737da0, reversing
changes made to 05491a0630670cb290b063f4f461b987887b812e.

--- a/benchmarks/image_segmentation/tensorflow/3d_unet_mlperf/requirements.txt
+++ b/benchmarks/image_segmentation/tensorflow/3d_unet_mlperf/requirements.txt
@@ -8,9 +8,10 @@ nnunet
 torch
 tqdm
 dicom2nifti
-scikit-image
+scikit-image>=0.14
 medpy
 scipy
-batchgenerators
+batchgenerators>=0.20.0
 sklearn
 pandas
+nibabel
