Prepare for Model Zoo v2.4.0 release (#20)
* Prepare for Model Zoo v2.4.0 release

Signed-off-by: Abolfazl Shahbazi <abolfazl.shahbazi@intel.com>

* Fix a typo in TFS version

Signed-off-by: Abolfazl Shahbazi <abolfazl.shahbazi@intel.com>

* Fix TF Serving '2.5.1' docs too

Signed-off-by: Abolfazl Shahbazi <abolfazl.shahbazi@intel.com>

--- a/k8s/image_recognition/tensorflow/resnet50v1_5/inference/fp32/mlops/serving/deployment.yaml
+++ b/k8s/image_recognition/tensorflow/resnet50v1_5/inference/fp32/mlops/serving/deployment.yaml
@@ -18,7 +18,7 @@ spec:
         fsGroup: 0 # {"$openapi":"FS_ID"}
       containers:
       - name: model-server
-        image: docker.io/intel/intel-optimized-tensorflow-serving:2.4.0 # {"$openapi":"IMAGE"}
+        image: docker.io/intel/intel-optimized-tensorflow-serving:latest # {"$openapi":"IMAGE"}
         envFrom:
         - configMapRef:
             name: resnet50v1-5-fp32-inference # {"$openapi":"MODEL_SERVING_NAME"}
