--- a/k8s/recommendation/tensorflow/wide_deep_large_ds/training/fp32/mlops/pipeline/user-allocated-pvc/train_and_serve.yaml
+++ b/k8s/recommendation/tensorflow/wide_deep_large_ds/training/fp32/mlops/pipeline/user-allocated-pvc/train_and_serve.yaml
@@ -99,7 +99,7 @@ spec:
                 fsGroup: {{workflow.parameters.FS_ID}}
               containers:
               - name: {{workflow.parameters.SERVER_NAME}}
-                image: intel/intel-optimized-tensorflow-serving:2.4.0
+                image: intel/intel-optimized-tensorflow-serving:latest
                 env:
                 - name: MODEL_BASE_PATH
                   value: {{workflow.parameters.OUTPUT_DIR}}
